--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "update": "^0.4.2"
   },
   "devDependencies": {
     "jest": "^27.4.7",
