--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - kmb-app
   kmb-server:
     image: kmb-server
-    build: ./server
+    build: ./server/
     ports:
-      - "8000:8000"
+      - "8080:8080"
     networks:
       - kmb-app
     depends_on:
@@ -23,8 +23,12 @@ services:
       - "27017:27017"
     networks:
       - kmb-app
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: adminpw
     volumes:
-      - mongo-data:/data/db
+      - ./backup:/backup
+#      - mongo-data:/data/db
 
 networks:
   kmb-app:
