--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -20,6 +20,24 @@ services:
       - "8080:8080"
     networks:
       - kmb-app
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - '9090:9090'
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+#  grafana:
+#    image: grafana/grafana:latest
+#    container_name: grafane
+#    ports:
+#      - "5000:5000"
+#    volumes:
+#      - grafana-data:/var/lib/grafana
+#    restart: unless-stopped
 
 networks:
   kmb-app:
@@ -30,5 +48,7 @@ volumes:
   caddy-data:
     driver: local
   caddy-config:
+    driver: local
+  prometheus.yml:
     driver: local
 
