--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/react": "^4.4.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
